--- a/Company/Views/AddEmployees/Index.cshtml
+++ b/Company/Views/AddEmployees/Index.cshtml
@@ -3,12 +3,89 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Добавление новых сотрудников</title>
+    <style>
+        body {
+            font-family: 'Times New Roman', sans-serif;
+            background: linear-gradient(to bottom right, #fbc2eb, #a18cd1);
+            margin: 0;
+            padding: 0;
+        }
+
+        header, footer {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            position: fixed;
+            width: 100%;
+            z-index: 999;
+        }
+
+        header {
+            top: 0;
+        }
+
+        footer {
+            bottom: 0;
+        }
+
+        h2 {
+            text-align: center;
+            color: #333;
+            margin-top: 60px; /* Учтите высоту хедера */
+        }
+
+        form {
+            max-width: 400px;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
+            display: block;
+            margin-bottom: 5px;
+            color: #666;
+        }
+
+        input[type="text"],
+        input[type="password"],
+        input[type="email"] {
+            width: calc(100% - 20px);
+            padding: 8px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        button[type="submit"] {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            display: block;
+            width: calc(100% - 20px);
+            margin: 10px auto 0;
+        }
+
+            button[type="submit"]:hover {
+                background-color: #0056b3;
+            }
+
+        .validation-message {
+            color: red;
+        }
+    </style>
 </head>
 <body>
-    <h2>Добавление новых сотрудников</h2>
-    <form asp-action="AddEmployees" method="post">
+    <h2 style ="margin-top: 50px">Добавление новых сотрудников</h2>
+    <form style="margin-top: 10px; margin-bottom: 100px" asp-action="AddEmployees" method="post">
         <div>
             <label asp-for="ФИО">ФИО:</label>
             <input asp-for="ФИО" />
