--- a/Company/Views/AccessRights/Index.cshtml
+++ b/Company/Views/AccessRights/Index.cshtml
@@ -5,35 +5,73 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Список прав доступа</title>
+    <style>
+        body {
+            background: linear-gradient(to bottom right, #b8d1e9, #f3f9ff);
+            font-family: 'Times New Roman', Times, serif;
+        }
+
+        .table-container {
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        tr:hover {
+            background-color: #ddd;
+        }
+    </style>
 </head>
 <body>
     <h2 style="margin-top: 200px; text-align: center;">Список прав доступа</h2>
-    <table class="table" style="width: 80%; margin: 0 auto; border-collapse: collapse;">
-        <thead>
-            <tr style="background-color: #f2f2f2;">
-                <th style="border: 1px solid #ddd; padding: 8px;">Код права</th>
-                <th style="border: 1px solid #ddd; padding: 8px;">Код роли</th>
-                <th style="border: 1px solid #ddd; padding: 8px;">Код приложения</th>
-                <th style="border: 1px solid #ddd; padding: 8px;">Название права</th>
-                <th style="border: 1px solid #ddd; padding: 8px;">Начало действия доступа</th>
-                <th style="border: 1px solid #ddd; padding: 8px;">Окончание действия доступа</th>
-                <th style="border: 1px solid #ddd; padding: 8px;">Тип доступа</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr style="border: 1px solid #ddd; padding: 8px; text-align: center;">
-                    <td style="border: 1px solid #ddd; padding: 8px;">@item.Код_права</td>
-                    <td style="border: 1px solid #ddd; padding: 8px;">@item.Код_роли</td>
-                    <td style="border: 1px solid #ddd; padding: 8px;">@item.Код_приложения</td>
-                    <td style="border: 1px solid #ddd; padding: 8px;">@item.Название_права</td>
-                    <td style="border: 1px solid #ddd; padding: 8px;">@item.Начало_действия_доступа</td>
-                    <td style="border: 1px solid #ddd; padding: 8px;">@item.Окончание_действия_доступа</td>
-                    <td style="border: 1px solid #ddd; padding: 8px;">@item.Тип_доступа</td>
+    <div class="table-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Код права</th>
+                    <th>Код роли</th>
+                    <th>Код приложения</th>
+                    <th>Название права</th>
+                    <th>Начало действия доступа</th>
+                    <th>Окончание действия доступа</th>
+                    <th>Тип доступа</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.Код_права</td>
+                        <td>@item.Код_роли</td>
+                        <td>@item.Код_приложения</td>
+                        <td>@item.Название_права</td>
+                        <td>@item.Начало_действия_доступа</td>
+                        <td>@item.Окончание_действия_доступа</td>
+                        <td>@item.Тип_доступа</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
