--- a/Company/Views/Organizations/Index.cshtml
+++ b/Company/Views/Organizations/Index.cshtml
@@ -1,5 +1,52 @@
 ﻿@model List<Company.Models.Организации>
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Список организаций</title>
+<style>
+    body {
+        font-family: 'Times New Roman', sans-serif;
+        background: linear-gradient(to bottom right, #fbc2eb, #a18cd1);
+        margin: 0;
+        padding: 0;
+    }
+
+    h2 {
+        text-align: center;
+        color: #333;
+    }
+
+    .table {
+        width: 100%;
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
+
+        .table th,
+        .table td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .table th {
+            background-color: #007bff;
+            color: #fff;
+        }
+
+        .table tbody tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        .table tbody tr:hover {
+            background-color: #ddd;
+        }
+</style>
+</head>
+<body>
+<h2 style="margin-top: 50px">Список организаций</h2>
 <table class="table">
     <thead>
         <tr>
@@ -33,3 +80,5 @@
         }
     </tbody>
 </table>
+</body>
+</html>
