--- a/Company/Views/AccessRights/Index.cshtml
+++ b/Company/Views/AccessRights/Index.cshtml
@@ -40,6 +40,24 @@
         tr:hover {
             background-color: #ddd;
         }
+
+        .button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .return-button {
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+            .return-button:hover {
+                background-color: #555;
+            }
     </style>
 </head>
 <body>
@@ -72,6 +90,11 @@
                 }
             </tbody>
         </table>
+    </div>
+    <div class="button-container">
+    <form method="get" action="/Menu/Index">
+        <button type="submit" class="return-button">Вернуться в меню</button>
+    </form>
     </div>
 </body>
 </html>
