--- a/Company/Views/Account/Login.cshtml
+++ b/Company/Views/Account/Login.cshtml
@@ -57,6 +57,25 @@
         color: red;
         font-size: 12px;
     }
+
+    .button-container {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .return-button {
+        padding: 10px 20px;
+        background-color: #333;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+        .return-button:hover {
+            background-color: #555;
+        }
 </style>
 
 <div class="login-container">
@@ -77,4 +96,10 @@
         </div>
     </form>
 </div>
+<div class="button-container">
+    <form method="get" action="/Home/Index">
+        <button type="submit" class="return-button">Вернуться на главную страницу</button>
+    </form>
+</div>
+
 
