--- a/Company/Views/ChangeStatus/Index.cshtml
+++ b/Company/Views/ChangeStatus/Index.cshtml
@@ -55,6 +55,25 @@
             button[type="submit"]:hover {
                 background-color: #0056b3;
             }
+
+        .button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .return-button {
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+            .return-button:hover {
+                background-color: #555;
+            }
     </style>
 </head>
 <body>
@@ -72,5 +91,10 @@
         </div>
         <button type="submit" class="btn btn-primary">Сохранить</button>
     </form>
+    <div class="button-container">
+        <form method="get" action="/Menu/Index">
+            <button type="submit" class="return-button">Вернуться в меню</button>
+        </form>
+    </div>
 </body>
 </html>
