--- a/Company/Views/Organizations/Index.cshtml
+++ b/Company/Views/Organizations/Index.cshtml
@@ -43,6 +43,25 @@
         .table tbody tr:hover {
             background-color: #ddd;
         }
+
+        .button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .return-button {
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+            .return-button:hover {
+                background-color: #555;
+            }
 </style>
 </head>
 <body>
@@ -80,5 +99,10 @@
         }
     </tbody>
 </table>
+    <div class="button-container">
+        <form method="get" action="/Menu/Index">
+            <button type="submit" class="return-button">Вернуться в меню</button>
+        </form>
+    </div>
 </body>
 </html>
