--- a/Company/Views/Employees/Index.cshtml
+++ b/Company/Views/Employees/Index.cshtml
@@ -5,8 +5,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Список сотрудников</title>
-</head>
-<style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
         body {
             font-family: 'Times New Roman', sans-serif;
             background: linear-gradient(to bottom right, #fbc2eb, #a18cd1);
@@ -14,56 +14,131 @@
             padding: 0;
         }
 
-    h2 {
-        text-align: center;
-        color: #333;
-    }
-
-    .table {
-        width: 100%;
-        border-collapse: collapse;
-        border-spacing: 0;
-    }
-
-        .table th,
-        .table td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
+        h2 {
+            text-align: center;
+            color: #333;
         }
 
-        .table th {
-            background-color: #007bff;
+        .table {
+            width: 100%;
+            border-collapse: collapse;
+            border-spacing: 0;
+        }
+
+            .table th,
+            .table td {
+                padding: 8px;
+                text-align: left;
+                border-bottom: 1px solid #ddd;
+            }
+
+            .table th {
+                background-color: #007bff;
+                color: #fff;
+            }
+
+            .table tbody tr:nth-child(even) {
+                background-color: #f2f2f2;
+            }
+
+            .table tbody tr:hover {
+                background-color: #ddd;
+            }
+
+        .button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .return-button {
+            padding: 10px 20px;
+            background-color: #333;
             color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
         }
 
-        .table tbody tr:nth-child(even) {
-            background-color: #f2f2f2;
+            .return-button:hover {
+                background-color: #555;
+            }
+
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4);
         }
 
-        .table tbody tr:hover {
-            background-color: #ddd;
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
         }
 
-    .button-container {
-        text-align: center;
-        margin-top: 20px;
-    }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
 
-    .return-button {
-        padding: 10px 20px;
-        background-color: #333;
-        color: #fff;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
+            .close:hover,
+            .close:focus {
+                color: black;
+                text-decoration: none;
+            }
+        /* Стили для якорей */
+        .anchor {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            width: 50px;
+            height: 50px;
+            background: linear-gradient(135deg, rgba(255, 192, 203, 0.7), rgba(255, 215, 0, 0.7), rgba(144, 238, 144, 0.7), rgba(135, 206, 250, 0.7), rgba(147, 112, 219, 0.7), rgba(255, 160, 122, 0.7), rgba(250, 128, 114, 0.7));
+            color: #fff;
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            z-index: 9999;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+            transition: background 0.3s, box-shadow 0.3s;
+        }
 
-        .return-button:hover {
-            background-color: #555;
+            .anchor:hover {
+                box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2), 0 2px 4px rgba(0, 0, 0, 0.15);
+            }
+
+            .anchor:active {
+                box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.15);
+            }
+
+        .anchor-up {
+            bottom: auto;
+            top: 20px;
+        }
+
+        .anchor svg {
+            fill: #fff; /* Цвет стрелочек */
+            width: 24px;
+            height: 24px;
         }
     </style>
+</head>
 <body>
     <h2 style="margin-top: 50px">Список сотрудников</h2>
     <table class="table">
@@ -85,7 +160,7 @@
         <tbody>
             @foreach (var employee in Model)
             {
-                <tr>
+                <tr class="employee-row">
                     <td>@employee.Код_сотрудника</td>
                     <td>@employee.Код_статуса</td>
                     <td>@employee.Код_аккаунта</td>
@@ -101,10 +176,65 @@
             }
         </tbody>
     </table>
+    <div id="employee-info-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div id="employee-info"></div>
+        </div>
+    </div>
     <div class="button-container">
-        <form method="get" action="/Menu/Index">
-            <button type="submit" class="return-button">Вернуться в меню</button>
+        <form method="get" action="/Home/Index">
+            <button type="submit" class="return-button">Вернуться на главную страницу</button>
         </form>
     </div>
+    <script>
+        $(document).ready(function () {
+            $(".employee-row").click(function () {
+                // Получаем данные из строки таблицы
+                var rowData = $(this).find("td").map(function () {
+                    return $(this).text();
+                }).get();
+
+                // Формируем HTML для карточки с данными сотрудника
+                var cardHtml = "<div><b>Код сотрудника:</b> " + rowData[0] + "</div>" +
+                    "<div><b>Код статуса:</b> " + rowData[1] + "</div>" +
+                    "<div><b>Код аккаунта:</b> " + rowData[2] + "</div>" +
+                    "<div><b>ФИО:</b> " + rowData[3] + "</div>" +
+                    "<div><b>Пол:</b> " + rowData[4] + "</div>" +
+                    "<div><b>Дата рождения:</b> " + rowData[5] + "</div>" +
+                    "<div><b>СНИЛС:</b> " + rowData[6] + "</div>" +
+                    "<div><b>Мобильный телефон:</b> " + rowData[7] + "</div>" +
+                    "<div><b>Адрес электронной почты:</b> " + rowData[8] + "</div>" +
+                    "<div><b>Адрес проживания:</b> " + rowData[9] + "</div>" +
+                    "<div><b>Должность:</b> " + rowData[10] + "</div>";
+
+                // Показываем информацию о сотруднике в модальном окне
+                $("#employee-info").html(cardHtml);
+                $("#employee-info-modal").css("display", "block");
+            });
+
+            $(".close").click(function () {
+                $("#employee-info-modal").css("display", "none");
+            });
+        });
+    </script>
+    <a href="#" class="anchor anchor-up" onclick="scrollToTop()">&uarr;</a>
+    <a href="#bottom" class="anchor anchor-down" onclick="scrollToBottom()">&darr;</a>
+
+    <script>
+        function scrollToTop() {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        }
+
+        function scrollToBottom() {
+            const bottom = document.getElementById('bottom');
+            bottom.scrollIntoView({ behavior: 'smooth' });
+        }
+    </script>
+    <a id="bottom"></a>
 </body>
 </html>
+
