--- a/Company/Views/MenuAdmin/Index.cshtml
+++ b/Company/Views/MenuAdmin/Index.cshtml
@@ -144,6 +144,7 @@
                 <option value="Account/Register">Регистрация</option>
                 <option value="AddEmployees/Index">Добавление сотрудника</option>
                 <option value="AddOrganization/Index">Добавление организации</option>
+                <option value="AddAccessRights/Index">Добавление прав доступа</option>
                 <option value="ChangeOrganizationStatus/Index">Изменение статуса организации</option>
                 <option value="Employees/Index">Список сотрудников</option>
                 <option value="Organizations/Index">Список организаций</option>
