--- a/Company/Views/MenuAdmin/Index.cshtml
+++ b/Company/Views/MenuAdmin/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Layout = "_LayoutNone";
+}
+<!DOCTYPE html>
 <html>
 <head>
     <title>Меню</title>
@@ -150,6 +153,16 @@
                 <option value="Organizations/Index">Список организаций</option>
                 <option value="Role/Index">Список ролей</option>
                 <option value="EditEmployees/Index">Редактирование информации о сотрудниках</option>
+                <option value="EditOrganization/Index">Редактирование информации об организациях</option>
+                <option value="Credentials">Редактирование информации об учетных записях</option>
+                <option value="Staff">Редактирование информации о кадровых назначениях</option>
+                <option value="Periods">Редактирование информации о периодах неисполнения обязанностей</option>
+                <option value="Access">Редактирование информации об ограничениях прав доступа</option>
+                <option value="Timetable">Редактирование информации о расписании</option>
+                <option value="EmployeeApp">Редактирование информации о сотрудниках приложений</option>
+                <option value="EditStatuses">Редактирование информации о статусах сотрудников</option>
+                <option value="Departments">Редактирование информации об отделах организаций</option>
+                <option value="Applications">Редактирование информации о приложениях</option>
             </select>
             <button type="submit">Перейти</button>
         </form>
