--- a/Company/Views/Departments/Index.cshtml
+++ b/Company/Views/Departments/Index.cshtml
@@ -156,9 +156,9 @@
                 @Html.DisplayFor(modelItem => item.Организации.Код_организации)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Код_отдела">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Код_отдела">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Код_отдела">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Код_отдела">Редактировать</a> |
+                <a asp-action="Details" asp-route-id="@item.Код_отдела">Список</a> |
+                <a asp-action="Delete" asp-route-id="@item.Код_отдела">Удалить</a>
             </td>
         </tr>
 }
