--- a/Company/Views/MenuAdmin/Index.cshtml
+++ b/Company/Views/MenuAdmin/Index.cshtml
@@ -159,7 +159,7 @@
                 <option value="Periods">Редактирование информации о периодах неисполнения обязанностей</option>
                 <option value="Access">Редактирование информации об ограничениях прав доступа</option>
                 <option value="Timetable">Редактирование информации о расписании</option>
-                <option value="EmployeeApp">Редактирование информации о сотрудниках приложений</option>
+                <option value="EmployeesApp">Редактирование информации о сотрудниках приложений</option>
                 <option value="EditStatuses">Редактирование информации о статусах сотрудников</option>
                 <option value="Departments">Редактирование информации об отделах организаций</option>
                 <option value="Applications">Редактирование информации о приложениях</option>
